Changed the thread utilities to a static class again.
git-svn-id: http://ikube.googlecode.com/svn/trunk@1186 89a0fb20-889e-aefa-90f6-7c296b20d5cf

--- a/code/libs/src/main/resources/ikube/common/spring.properties
+++ b/code/libs/src/main/resources/ikube/common/spring.properties
@@ -29,6 +29,8 @@ stored=true
 not.stored=false
 vectored=true
 
+max.memory=12000
+
 # The number of threads for each indexing component/connector
 table.handler.threads=3
 internet.handler.threads=10
@@ -59,10 +61,10 @@ end.tier=20
 ################################################
 
 # The delay before the scheduled tasks start executing
-delay=600000
+delay=180000
 delay-delta=6100000
 # The period between notifications for timed tasks
-period=60000
+period=180000
 period-delta=6100000
 # The maximum age of the GeoSpatial index
 max.age.geospatial=6000
@@ -79,15 +81,17 @@ stemming.analyzer.stop.words=false
 # The H2 database credentials
 h2.jdbc.userid=sa
 h2.jdbc.password=
+h2.jdbc.driver=org.h2.Driver
+
+# Database urls
 h2.jdbc.url=jdbc:h2:file:ikube/ikube
 # h2.jdbc.url=jdbc:h2:mem:ikube
-h2.jdbc.driver=org.h2.Driver
+#jdbc:h2:tcp://localhost/~/ikube
+
+# Database options
 #AUTO_SERVER_PORT=9090;
 #AUTO_SERVER=TRUE;
-#h2.jdbc.url=jdbc:h2:file:ikube
 #;DB_CLOSE_ON_EXIT=FALSE
-#jdbc:h2:file:ikube
-#jdbc:h2:tcp://localhost/~/ikube
 
 # The DB2 database credentials
 db2.jdbc.userid=ubuntu
