Fixed some compile problems and added the language detection library and the skeleton for the strategy.
git-svn-id: http://ikube.googlecode.com/svn/trunk@1191 89a0fb20-889e-aefa-90f6-7c296b20d5cf

--- a/code/libs/pom.xml
+++ b/code/libs/pom.xml
@@ -288,6 +288,23 @@
 							<url>${artifactory}</url>
 						</configuration>
 					</execution>
+					<execution>
+						<id>install-languagedetect</id>
+						<goals>
+							<goal>deploy-file</goal>
+						</goals>
+						<phase>${phase}</phase>
+						<configuration>
+							<groupId>cybozu</groupId>
+							<artifactId>languagedetect</artifactId>
+							<version>1.0.0</version>
+							<file>tools/languagedetect-1.0.0.jar</file>
+							<packaging>${packaging}</packaging>
+							<generatePom>${generate-pom}</generatePom>
+							<repositoryId>${repository-id}</repositoryId>
+							<url>${artifactory}</url>
+						</configuration>
+					</execution>
 				</executions>
 			</plugin>
 		</plugins>
