Added the configuration for the language detection to load up to the Artifactory.
git-svn-id: http://ikube.googlecode.com/svn/trunk@1193 89a0fb20-889e-aefa-90f6-7c296b20d5cf

--- a/code/libs/pom.xml
+++ b/code/libs/pom.xml
@@ -305,6 +305,23 @@
 							<url>${artifactory}</url>
 						</configuration>
 					</execution>
+					<execution>
+						<id>install-jsonic</id>
+						<goals>
+							<goal>deploy-file</goal>
+						</goals>
+						<phase>${phase}</phase>
+						<configuration>
+							<groupId>jsonic</groupId>
+							<artifactId>jsonic</artifactId>
+							<version>1.2.4</version>
+							<file>tools/jsonic-1.2.4.jar</file>
+							<packaging>${packaging}</packaging>
+							<generatePom>${generate-pom}</generatePom>
+							<repositoryId>${repository-id}</repositoryId>
+							<url>${artifactory}</url>
+						</configuration>
+					</execution>
 				</executions>
 			</plugin>
 		</plugins>
