Updated the poms with the language detector and started moving integration tests to the core again.
git-svn-id: http://ikube.googlecode.com/svn/trunk@1195 89a0fb20-889e-aefa-90f6-7c296b20d5cf

--- a/pom.xml
+++ b/pom.xml
@@ -944,6 +944,16 @@
 			<artifactId>org.eclipse.jgit</artifactId>
 			<version>0.9.3</version>
 		</dependency>
+		<dependency>
+			<groupId>cybozu</groupId>
+			<artifactId>langdetect</artifactId>
+			<version>1.0.0</version>
+		</dependency>
+		<dependency>
+			<groupId>jsonic</groupId>
+			<artifactId>jsonic</artifactId>
+			<version>1.2.4</version>
+		</dependency>
 	</dependencies>
 
 	<repositories>
