--- a/code/libs/pom.xml
+++ b/code/libs/pom.xml
@@ -296,9 +296,9 @@
 						<phase>${phase}</phase>
 						<configuration>
 							<groupId>cybozu</groupId>
-							<artifactId>languagedetect</artifactId>
+							<artifactId>langdetect</artifactId>
 							<version>1.0.0</version>
-							<file>tools/languagedetect-1.0.0.jar</file>
+							<file>tools/langdetect-1.0.0.jar</file>
 							<packaging>${packaging}</packaging>
 							<generatePom>${generate-pom}</generatePom>
 							<repositoryId>${repository-id}</repositoryId>
