--- a/code/libs/src/main/resources/ikube/common/spring.properties
+++ b/code/libs/src/main/resources/ikube/common/spring.properties
@@ -19,7 +19,7 @@ internet.batch.size=10000
 file.batch.size=10000
 file.max.read.length=1000000
 throttle=0
-max.actions=1
+max.actions=3
 # Max index size before another one is started in megs
 max.index.size=25000
 
@@ -30,6 +30,12 @@ not.stored=false
 vectored=true
 
 max.memory=12000
+
+wiki.read.length=100000000
+wiki.index.age=100800
+
+max.revisions=100000000
+max.exceptions=10
 
 # The number of threads for each indexing component/connector
 table.handler.threads=3
@@ -61,7 +67,7 @@ end.tier=20
 ################################################
 
 # The delay before the scheduled tasks start executing
-delay=180000
+delay=30000
 delay-delta=6100000
 # The period between notifications for timed tasks
 period=180000
