--- a/code/site/src/main/webapp/WEB-INF/web.xml
+++ b/code/site/src/main/webapp/WEB-INF/web.xml
@@ -7,8 +7,7 @@
 
 	xsi:schemaLocation="
 		http://java.sun.com/xml/ns/javaee
-        http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd" 
-	id="WebApp_ID"
+        http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd" id="WebApp_ID"
 	version="2.5">
 
 	<display-name>Ikube site</display-name>
@@ -16,15 +15,27 @@
 	<listener>
 		<listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
 	</listener>
-	
+
+	<context-param>
+		<param-name>contextConfigLocation</param-name>
+		<param-value>
+			/WEB-INF/sec.xml
+			/WEB-INF/spring.xml
+		</param-value>
+	</context-param>
+
 	<listener>
 		<listener-class>org.springframework.web.context.request.RequestContextListener</listener-class>
 	</listener>
 	
-	<context-param>
-		<param-name>contextConfigLocation</param-name>
-		<param-value>/WEB-INF/spring.xml</param-value>
-	</context-param>
+	<filter>
+		<filter-name>springSecurityFilterChain</filter-name>
+		<filter-class>org.springframework.web.filter.DelegatingFilterProxy</filter-class>
+	</filter>
+	<filter-mapping>
+		<filter-name>springSecurityFilterChain</filter-name>
+		<url-pattern>/*</url-pattern>
+	</filter-mapping>
 
 	<servlet>
 		<servlet-name>springDispatcherServlet</servlet-name>
@@ -40,6 +51,7 @@
 	</servlet-mapping>
 
 	<welcome-file-list>
+		<welcome-file>index.jsp</welcome-file>
 		<welcome-file>index.html</welcome-file>
 	</welcome-file-list>
 
