--- a/pom.xml
+++ b/pom.xml
@@ -58,7 +58,7 @@
 		<module>code/war</module>
 		<module>code/site</module>
 		<module>code/libs</module>
-		<!-- <module>code/tool</module> -->
+		<module>code/tool</module>
 	</modules>
 
 	<build>
