Moved the site security to the server.
git-svn-id: http://ikube.googlecode.com/svn/trunk@1198 89a0fb20-889e-aefa-90f6-7c296b20d5cf

--- a/code/site/src/main/webapp/WEB-INF/web.xml
+++ b/code/site/src/main/webapp/WEB-INF/web.xml
@@ -18,10 +18,7 @@
 
 	<context-param>
 		<param-name>contextConfigLocation</param-name>
-		<param-value>
-			/WEB-INF/sec.xml
-			/WEB-INF/spring.xml
-		</param-value>
+		<param-value>/WEB-INF/spring.xml</param-value>
 	</context-param>
 
 	<listener>
