Updated the build and the version properties.
git-svn-id: http://ikube.googlecode.com/svn/trunk@1202 89a0fb20-889e-aefa-90f6-7c296b20d5cf

--- a/pom.xml
+++ b/pom.xml
@@ -56,9 +56,9 @@
 	<modules>
 		<module>code/core</module>
 		<module>code/war</module>
-		<module>code/site</module>
-		<module>code/libs</module>
-		<module>code/tool</module>
+		<!-- <module>code/site</module> -->
+		<!-- <module>code/libs</module> -->
+		<!-- <module>code/tool</module> -->
 	</modules>
 
 	<build>
