--- a/code/war/pom.xml
+++ b/code/war/pom.xml
@@ -67,14 +67,10 @@
 				<version>1.6</version>
 				<executions>
 					<execution>
-						<id>write-release-info</id>
+						<id>prepare-ikube-configuration-directory</id>
 						<phase>pre-integration-test</phase>
 						<configuration>
 							<target>
-								<echo message="Writing release file : " />
-								<echo file="src/main/webapp/WEB-INF/templates/release.txt" append="false">
-									${project.version} - ${maven.build.timestamp}
-								</echo>
 								<echo message="Base directory : ${basedir}, ">Base directory : ${basedir}</echo>
 								<copy todir="ikube" failonerror="true">
 									<fileset dir="../libs/src/main/resources/ikube" />
