Some cleaning and updating the configuration.
git-svn-id: http://ikube.googlecode.com/svn/trunk@1203 89a0fb20-889e-aefa-90f6-7c296b20d5cf

--- a/code/libs/src/main/resources/ikube/common/spring.properties
+++ b/code/libs/src/main/resources/ikube/common/spring.properties
@@ -19,7 +19,7 @@ internet.batch.size=10000
 file.batch.size=10000
 file.max.read.length=1000000
 throttle=0
-max.actions=3
+max.actions=1
 # Max index size before another one is started in megs
 max.index.size=25000
 
@@ -40,7 +40,7 @@ max.exceptions=10
 # The number of threads for each indexing component/connector
 table.handler.threads=3
 internet.handler.threads=10
-filesystem.handler.threads=3
+filesystem.handler.threads=1
 email.handler.threads=3
 
 # These parameters are client specific
@@ -67,10 +67,10 @@ end.tier=20
 ################################################
 
 # The delay before the scheduled tasks start executing
-delay=300000
+delay=15000
 delay-delta=6100000
 # The period between notifications for timed tasks
-period=180000
+period=60000
 period-delta=6100000
 # The maximum age of the GeoSpatial index
 max.age.geospatial=6000
@@ -78,7 +78,7 @@ max.age.geospatial=6000
 # The number of minutes before the throttle is increased
 cpu.load.period=3
 # Whether this listener is active and will modify the throttle
-cpu.load.active=true
+cpu.load.active=false
 # The maximum load per cpu before the throttle is increased for all indexes
 cpu.load.threshold=0.9
 # Whether to use the stop words in the analyzer
