--- a/pom.xml
+++ b/pom.xml
@@ -954,6 +954,11 @@
 			<artifactId>jsonic</artifactId>
 			<version>1.2.4</version>
 		</dependency>
+		<dependency>
+			<groupId>edu.cmu.sphinx</groupId>
+			<artifactId>sphinx4</artifactId>
+			<version>1.0-beta6</version>
+		</dependency>
 	</dependencies>
 
 	<repositories>
@@ -1000,6 +1005,13 @@
 		<repository>
 			<id>ikube</id>
 			<url>http://ikube.be/artifactory/libs-release-local/</url>
+			<snapshots>
+				<enabled>true</enabled>
+			</snapshots>
+		</repository>
+		<repository>
+			<id>ow2</id>
+			<url>http://repository.ow2.org/nexus/content/repositories/ow2-legacy/</url>
 			<snapshots>
 				<enabled>true</enabled>
 			</snapshots>
