Updated some tests. Cleaned some classes that were not used. Modified the configuration for the integration and production tests.
git-svn-id: http://ikube.googlecode.com/svn/trunk@1212 89a0fb20-889e-aefa-90f6-7c296b20d5cf

--- a/build.properties
+++ b/build.properties
@@ -6,4 +6,8 @@ sleep=30
 target-directory=code/war/target
 configuration-directory=code/libs/src/main/resources/ikube
 
+tomcat-directory=/opt/apache-tomcat-7.0.33
+tomcat-bin-directory=${tomcat-directory}/bin
+tomcat-webapps-directory=${tomcat-directory}/webapps
+
 verbose=true
