--- a/code/libs/src/main/resources/ikube/common/spring.properties
+++ b/code/libs/src/main/resources/ikube/common/spring.properties
@@ -19,7 +19,7 @@ internet.batch.size=10000
 file.batch.size=10000
 file.max.read.length=1000000
 throttle=0
-max.actions=1
+max.actions=3
 # Max index size before another one is started in megs
 max.index.size=25000
 
@@ -40,7 +40,7 @@ max.exceptions=10
 # The number of threads for each indexing component/connector
 table.handler.threads=3
 internet.handler.threads=10
-filesystem.handler.threads=1
+filesystem.handler.threads=3
 email.handler.threads=3
 
 # These parameters are client specific
@@ -67,7 +67,7 @@ end.tier=20
 ################################################
 
 # The delay before the scheduled tasks start executing
-delay=15000
+delay=300000
 delay-delta=6100000
 # The period between notifications for timed tasks
 period=60000
@@ -78,7 +78,7 @@ max.age.geospatial=6000
 # The number of minutes before the throttle is increased
 cpu.load.period=3
 # Whether this listener is active and will modify the throttle
-cpu.load.active=false
+cpu.load.active=true
 # The maximum load per cpu before the throttle is increased for all indexes
 cpu.load.threshold=0.9
 # Whether to use the stop words in the analyzer
@@ -98,18 +98,6 @@ h2.jdbc.url=jdbc:h2:file:ikube/ikube
 #AUTO_SERVER_PORT=9090;
 #AUTO_SERVER=TRUE;
 #;DB_CLOSE_ON_EXIT=FALSE
-
-# The DB2 database credentials
-db2.jdbc.userid=ubuntu
-db2.jdbc.password=Caherl1ne
-db2.jdbc.url=jdbc:db2://ikube.be:50000/ikube
-db2.jdbc.driver=com.ibm.db2.jcc.DB2Driver
-
-# The Oracle database credentials
-oracle.jdbc.userid=ikube
-oracle.jdbc.password=Caherl1ne
-oracle.jdbc.url=jdbc:oracle:thin:@//ikube.be:1521/XE
-oracle.jdbc.driver=oracle.jdbc.driver.OracleDriver
 
 #General JDBC settings
 jdbc.minPoolSize=1
