Did some re-factoring and cleaning. Also implemented the auto complete.
git-svn-id: http://ikube.googlecode.com/svn/trunk@1215 89a0fb20-889e-aefa-90f6-7c296b20d5cf

--- a/build.properties
+++ b/build.properties
@@ -10,4 +10,12 @@ tomcat-directory=/opt/apache-tomcat-7.0.33
 tomcat-bin-directory=${tomcat-directory}/bin
 tomcat-webapps-directory=${tomcat-directory}/webapps
 
-verbose=true
+tomcat-directory-one=/usr/share/apache-tomcat-6.0.29-1
+tomcat-directory-two=/usr/share/apache-tomcat-6.0.29-2
+tomcat-directory-three=/usr/share/apache-tomcat-6.0.29-3
+
+tomcat-bin-directory-one=${tomcat-directory-one}/bin
+tomcat-bin-directory-two=${tomcat-directory-two}/bin
+tomcat-bin-directory-three=${tomcat-directory-three}/bin
+
+verbose=false
