--- a/code/libs/src/main/resources/ikube/common/spring.properties
+++ b/code/libs/src/main/resources/ikube/common/spring.properties
@@ -12,14 +12,14 @@ merge.factor=100000
 buffered.docs=100000
 max.field.length=10000
 max.read.length=10000000
-index.directory.path=./indexes
+index.directory.path=/tmp/indexes
 index.directory.path.backup=${index.directory.path}
 jdbc.batch.size=10000
 internet.batch.size=10000
 file.batch.size=10000
 file.max.read.length=1000000
 throttle=0
-max.actions=3
+max.actions=1
 # Max index size before another one is started in megs
 max.index.size=25000
 
@@ -67,7 +67,7 @@ end.tier=20
 ################################################
 
 # The delay before the scheduled tasks start executing
-delay=300000
+delay=15000
 delay-delta=6100000
 # The period between notifications for timed tasks
 period=60000
