--- a/build.xml
+++ b/build.xml
@@ -10,46 +10,38 @@
 
 	<target name="go">
 		<antcall target="prepare" />
-		<antcall target="stop-servers" />
+		<antcall target="stop-server" />
 		<!-- Deploy the configuration and ikube and start the servers -->
 		<antcall target="go-server" inheritall="true">
-			<param name="server-ip" value="ikube.be" />
 			<param name="tomcat-home" value="${tomcat-directory}" />
 		</antcall>
 	</target>
 
-	<target name="stop-servers">
+	<target name="stop-server">
 		<!-- Stop all the processes, the only way to stop Tomcat -->
 		<antcall target="execute-remote-command">
-			<param name="server-ip" value="ikube.be" />
 			<param name="command" value="cd ${tomcat-bin-directory}; ./shutdown.sh;" />
 		</antcall>
-		<sleep seconds="15" />
 	</target>
 
 	<target name="deploy-site">
 		<antcall target="execute-remote-command">
-			<param name="server-ip" value="ikube.be" />
 			<param name="command" value="cd ${tomcat-bin-directory}; ./shutdown.sh;" />
 		</antcall>
 		<sleep seconds="15" />
 		<antcall target="execute-remote-command">
-			<param name="server-ip" value="ikube.be" />
 			<param name="command" value="
 				rm -rf ${tomcat-webapps-directory}/site*;
 				rm -rf ${tomcat-directory}/logs;
 				mkdir -p ${tomcat-directory}/logs;" />
 		</antcall>
 		<antcall target="deploy-ikube-site">
-			<param name="server-ip" value="ikube.be" />
 			<param name="tomcat-home" value="${tomcat-directory}" />
 		</antcall>
 		<antcall target="execute-remote-command">
-			<param name="server-ip" value="ikube.be" />
 			<param name="command" value="chmod 777 -R ${tomcat-directory};" />
 		</antcall>
 		<antcall target="execute-remote-command">
-			<param name="server-ip" value="ikube.be" />
 			<param name="command" value="
 						cd ${tomcat-bin-directory};
 						./startup.sh;" />
@@ -57,18 +49,51 @@
 	</target>
 
 	<target name="deploy-ikube-site">
-		<scp 
-			file="code/site/target/site.war" 
-			todir="${userid}:${password}@${server-ip}:${tomcat-home}/webapps" 
-			trust="true" 
-			failonerror="false" 
-			verbose="${verbose}" />
+		<scp file="code/site/target/site.war" todir="${userid}:${password}@${server-ip}:${tomcat-home}/webapps" trust="true" failonerror="false" verbose="${verbose}" />
+	</target>
+
+	<target name="go-servers">
+		<antcall target="prepare" />
+		<antcall target="stop-servers" />
+		<antcall target="go-server">
+			<param name="tomcat-home" value="${tomcat-directory-one}" />
+		</antcall>
+		<antcall target="go-server">
+			<param name="tomcat-home" value="${tomcat-directory-two}" />
+		</antcall>
+		<antcall target="go-server">
+			<param name="tomcat-home" value="${tomcat-directory-three}" />
+		</antcall>
+		<antcall target="start-servers" />
+	</target>
+
+	<target name="stop-servers">
+		<antcall target="execute-remote-command">
+			<param name="command" value="cd ${tomcat-bin-directory-one}; ./shutdown.sh;" />
+		</antcall>
+		<antcall target="execute-remote-command">
+			<param name="command" value="cd ${tomcat-bin-directory-two}; ./shutdown.sh;" />
+		</antcall>
+		<antcall target="execute-remote-command">
+			<param name="command" value="cd ${tomcat-bin-directory-three}; ./shutdown.sh;" />
+		</antcall>
+	</target>
+
+	<target name="start-servers">
+		<antcall target="execute-remote-command">
+			<param name="command" value="cd ${tomcat-bin-directory-one}; ./startup.sh;" />
+		</antcall>
+		<antcall target="execute-remote-command">
+			<param name="command" value="cd ${tomcat-bin-directory-two}; ./startup.sh;" />
+		</antcall>
+		<antcall target="execute-remote-command">
+			<param name="command" value="cd ${tomcat-bin-directory-three}; ./startup.sh;" />
+		</antcall>
 	</target>
 
 	<target name="go-server">
 		<!-- Clean all the output folders and the configuration -->
 		<antcall target="execute-remote-command">
-			<param name="server-ip" value="${server-ip}" />
 			<param name="command" value="
 				rm -rf ${tomcat-home}/bin/ikube;
 				rm -rf ${tomcat-home}/webapps/ikube*;
@@ -78,7 +103,6 @@
 		</antcall>
 		<!-- Deploy the configuration to the server -->
 		<antcall target="copy-directory-to-server">
-			<param name="server-ip" value="${server-ip}" />
 			<param name="directory-to-copy" value="${configuration-directory}" />
 			<param name="server-directory" value="${tomcat-home}/bin/ikube" />
 		</antcall>
@@ -89,12 +113,10 @@
 		</antcall>
 		<!-- Change the directory permissions just in case -->
 		<antcall target="execute-remote-command">
-			<param name="server-ip" value="${server-ip}" />
 			<param name="command" value="chmod 777 -R ${tomcat-home};" />
 		</antcall>
 		<!-- Start the server -->
 		<antcall target="execute-remote-command">
-			<param name="server-ip" value="${server-ip}" />
 			<param name="command" value="
 				cd ${tomcat-home}/bin;
 				./startup.sh;" />
@@ -118,14 +140,7 @@
 	</target>
 
 	<target name="execute-remote-command">
-		<sshexec 
-			host="${server-ip}" 
-			trust="true" 
-			username="${userid}" 
-			password="${password}" 
-			command="${command}" 
-			failonerror="false"
-			usepty="true" />
+		<sshexec host="${server-ip}" trust="true" username="${userid}" password="${password}" command="${command}" failonerror="false" usepty="true" />
 	</target>
 
 	<target name="deploy-configuration-for-jetty" description="Copies the configuration folder to the base of the project modules so Jetty can start">
