Fiddling around again.
git-svn-id: http://ikube.googlecode.com/svn/trunk@1217 89a0fb20-889e-aefa-90f6-7c296b20d5cf

--- a/build.properties
+++ b/build.properties
@@ -18,4 +18,4 @@ tomcat-bin-directory-one=${tomcat-directory-one}/bin
 tomcat-bin-directory-two=${tomcat-directory-two}/bin
 tomcat-bin-directory-three=${tomcat-directory-three}/bin
 
-verbose=false
+verbose=true
