Changed the configuration to use the nas again.
git-svn-id: http://ikube.googlecode.com/svn/trunk@1222 89a0fb20-889e-aefa-90f6-7c296b20d5cf

--- a/code/libs/src/main/resources/ikube/common/spring.properties
+++ b/code/libs/src/main/resources/ikube/common/spring.properties
@@ -12,7 +12,7 @@ merge.factor=1000
 buffered.docs=1000
 max.field.length=10000
 max.read.length=10000000
-index.directory.path=/tmp/indexes
+index.directory.path=/mnt/xfs-five
 index.directory.path.backup=${index.directory.path}
 jdbc.batch.size=10000
 internet.batch.size=100
@@ -31,7 +31,7 @@ vectored=true
 
 max.memory=96000
 
-wiki.read.length=100000000
+wiki.read.length=1000000
 wiki.index.age=100800
 
 max.revisions=100000000
