--- a/code/libs/src/main/resources/ikube/common/spring.properties
+++ b/code/libs/src/main/resources/ikube/common/spring.properties
@@ -12,8 +12,8 @@ merge.factor=1000
 buffered.docs=1000
 max.field.length=10000
 max.read.length=10000000
-index.root=/mnt
-index.directory.path=/mnt/nas-five
+index.root=/tmp
+index.directory.path=${index.root}/nas-five
 index.directory.path.backup=${index.directory.path}
 jdbc.batch.size=10000
 internet.batch.size=100
